# Neural-Network

./: .gitignore  README.md  neural_network.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: evaluate.py  predict.py  train.py
src/neural_network/: __init__.py  data.py  metrics.py  model.py  model_library.py  preprocessing.py  train.py
tests/: test_model.py  test_preprocessing.py  test_train.py
